# Valygate

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
crates/core/: Cargo.toml
crates/core/src/: error.rs
crates/log/: Cargo.toml
crates/log/src/: init.rs  models.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: config.rs  lib.rs
src/: lib.rs  main.rs
src/rts/: root.rs
src/sys/: config.rs  init.rs  mod.rs  state.rs
