[package]
name = "valygate"
version = "0.0.1"
edition = "2024"

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tower-http.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
telemetry.workspace = true
envy.workspace = true
reqwest.workspace = true
valygate-core.workspace = true


[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.44", features = ["serde"] }
tokio = { version = "1.50.0", features = [
    "rt-multi-thread",
    "macros",
    "signal",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
dotenvy = "0.15.7"
envy = "0.4.2"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
telemetry = { path = "crates/telemetry" }
valygate-core = { path = "crates/core" }
tower-http = { version = "0.6.8", features = ["trace"] }
thiserror = "2.0.18"


[profile.release]
opt-level = 3     # Max optimization
lto = "fat"       # Link Time Optimization across all crates
codegen-units = 1 # Slower compile times, but faster execution
panic = "abort"   # Removes stack unwinding overhead
strip = "symbols" # Strips debug symbols to reduce binary size and improve cache locality
